--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script>
+      window.csrfToken = "{{ csrf_token }}";
+    </script>
+    
     <meta
       name="description"
       content="Web site created using create-react-app"
